datasets/1b9606be-c1c3-47c9-812a-b2371f7b54f9.txt
4. Instruction: Convert the given sentence into a limerick by adding four more lines.
4. Input: 
There once was a dog named Ace
4. Output: 
There once was a dog named Ace,
Who loved to join in a race.
He'd sprint with great might,
From morning till night,
And eventually win first place.

5. Instruction: Translate the given English text to French.
5. Input: 
Please let me know if you have any questions.
5. Output: 
S'il vous plaît laissez-moi savoir si vous avez des questions.

6. Instruction: Indicate if the given address belongs to a valid email address format. If so, output "yes"; otherwise, output "no".
6. Input: 
johndoe#gmail*com
6. Output: 
No

7. Instruction: Identify the tone of the given statement as positive, negative, or neutral.
7. Input: 
I have mixed feelings about this new phone.
7. Output: 
Neutral

8. Instruction: Write a brief summary of the given article.
8. Input: 
Tesla has announced plans to build a new factory in Texas, which will focus primarily on producing the new Tesla Cybertruck, as well as the Tesla Model Y for the East Coast. The five-million-square-foot facility will be stationed on a 2,100-acre land, located near Austin, and is said to have great potential for creating new job opportunities within the region. Tesla’s CEO, Elon Musk, has estimated that the factory could create around 5,000 jobs and bring billions of dollars in investment. Construction of the Texas Gigafactory is expected to be completed in a timely manner, with production set to commence soon after.
8. Output: 
Tesla plans to build a new factory in Texas, concentrating on producing the Cybertruck and Model Y for the East Coast. The facility could potentially create 5,000 jobs and will be located near Austin. Constructed is expected to be completed quickly with production to start soon after.

9. Instruction: Calculate the total number of calories in a meal containing the following items and their corresponding calorie count.
9. Input: 
Grilled chicken: 180 calories
Brown rice: 215 calories
Steamed vegetables: 100 calories
Mixed fruit salad: 150 calories
9. Output: 
645 calories

10. Instruction: Explain how to fix the given code error in Python.
10. Input: 
SyntaxError: invalid syntax
if len(word) > 5
                 ^
10. Output: 
You're missing a colon at the end of the if statement. Just add a colon like this: 
if len(word) > 5:

11. Instruction: Tell me a fascinating fact about the human brain.
11. Input: 
<noinput>
11. Output: 
The human brain has around 100 billion neurons, each linking to around 10,000 other neurons, making for up to 1000 trillion synaptic connections.

12. Instruction: Describe a typical day in the life of an astronaut in space.
12. Input: 
<noinput>
12. Output: 
An astronaut's day in space starts with a wakeup call, followed by personal hygiene and breakfast. They then check schedules and plan tasks with ground control. Astronauts conduct research, maintain the spacecraft, do housekeeping tasks, and exercise. Meals are rehydrated or pre-packaged. Communication with family is scheduled, and leisure time is also given. The day ends with preparations for sleep in microgravity sleeping bags.

13. Instruction: Analyze if the given claim is true, false, or uncertain based on the information provided.
13. Input: 
Claim: Elephants are the largest land animals on Earth.
Elephants are large herbivores with adults weighing in at an average of around 5,000 to 14,000 lbs. They can be up to 13 feet tall and 24 feet long.
13. Output: 
True

14. Instruction: Write a short poem about winter.
14. Input: 
<noinput>
14. Output: 
In winter's icy grip, we find,
A world transformed, as frost combined,
With snow that cloaks the earth in white,
And shimmers in the pale moonlight.
Oh, winter's touch, though harsh and cold,
Brings beauty fierce and sights untold.

15. Instruction: Replace the underlined words with appropriate synonyms.
15. Input: 
She mustered enough courage to face the daunting task ahead.
15. Output: 
She gathered enough bravery to confront the intimidating challenge ahead.

16. Instruction: Describe one benefit of using solar energy.
16. Input: 
<noinput>
16. Output: 
One benefit of using solar energy is that it's a renewable source of power, meaning it continuously replenishes and will not be depleted, unlike fossil fuels.

17. Instruction: Tell me the name of a popular Italian dessert.
17. Input: 
<noinput>
17. Output: 
Tiramisu

18. Instruction: Spell "irresistible" backward.
18. Input: 
<noinput>
18. Output: 
elbitsisirri

19. Instruction: From the list provided, identify the even numbers.
19. Input: 
3, 5, 8, 12, 15, 20, 27, 32
19. Output: 
8, 12, 20, 32

20. Instruction: Suggest an idea for a birthday gift for a 10-year-old boy.
20. Input: 
<noinput>
20. Output: 
A LEGO building set of his favorite theme or franchise.